# barberoldtown

booking-service/: pom.xml
booking-service/src/main/resources/: application.properties
category-service/: pom.xml
category-service/src/main/resources/: application.properties
frontend/public/AGENT/: .env  api.py  client_mcp.py  db_queries.py  pyproject.toml  schema.sql  server_mcp.py  test_connection.py
frontend/public/AGENT/templates/: index.html
frontend/src/Admin/pages/salon/: SalonTable.jsx
frontend/src/Auth/: Login.jsx  PasswordChangeSuccess.jsx  Register.jsx  ResetPasswordForm.jsx  ResetPaswordRequest.jsx
frontend/src/Customer/pages/Bookings/: BookingCard.jsx  Bookings.jsx
frontend/src/Customer/pages/Footer/: Footer.jsx
frontend/src/Customer/pages/Home/: Banner.jsx  Home.jsx
frontend/src/Customer/pages/Navbar/: Navbar.jsx
frontend/src/Customer/pages/NotFound/: NotFound.jsx
frontend/src/Customer/pages/Notifications/: Notification.jsx
frontend/src/Customer/pages/Payment/: PaymentSuccessHandler.jsx
frontend/src/Customer/pages/Salon/: SearchSalon.jsx
frontend/src/Customer/pages/Salon/Reviews/: RatingCard.jsx  Review.jsx
frontend/src/Data/: Services.js
payment-service/: pom.xml
payment-service/src/main/resources/: application.properties
salon-service/: pom.xml
salon-service/src/main/resources/: application.properties
service-offering/: pom.xml
service-offering/src/main/resources/: application.properties
user-service/: pom.xml
user-service/src/main/resources/: application.properties
(+77 files in other folders)
